Changes from jTDS 1.2.6
=======================

10/26/2012 - Holger Rehn
 o Added test for bug #500, Statement.execute() fails if using cursors and
   SHOWPLAN_ALL is set to ON.
 o Fixed bug #528, any ResultSet gets dropped when using RETURN_GENERATED_KEYS.
 o A ResultSet returned by Statement.getGeneratedKeys() is no longer updatable.
 o Improved the database meta data by adding (JDBC4) column IS_AUTOINCREMENT.

10/25/2012 - Holger Rehn
 o Removed unnecessary console logging from various unit tests.
 o Improved overall driver performance by avoiding blocking (and potentially
   slow) lookup of virtual data streams, required for any request/response.

10/24/2012 - Holger Rehn
 o Fixed a bug that caused Statement.close() to throw an exception for errors
   caused by previously executed SQL statements.
 o Added unit tests for bugs #473 and #635.

10/23/2012 - Holger Rehn
 o Reduced locking in SharedSocket.finalize() to a minimum, as proposed by Kods
   in bug #609.

10/18/2012 - Holger Rehn
 o Added test for bug #632, year-check 1753-9999 not valid for type DATE.
 o Added test for bug #624, MS SQL Server 2008 full text search problem.
 o Extended build process to create and upload Maven artifacts to sonatype.org
   (bug #636, bug #668, feature request #49, feature request #70).

10/15/2012 - Holger Rehn
 o Fixed various JUnit tests causing warnings.

10/10/2012 - Holger Rehn
 o Fixed format conversion errors for DATETIME, DATE and TIME values.
 o Fixed bug #615, the SQL parser doesn't correctly handle function escapes
   containing nested (unescaped) functions.
 o Fixed bug #634, incorrect comment processing in callable statements.

10/09/2012 - Holger Rehn
 o Fixed parameter name format for procedure calls using named parameters.
 o Fixed unit tests that depend on date/time data types to be skipped if run
   against a server not supporting that types.

10/08/2012 - Holger Rehn
 o Fixed bug #647, preparing a statement including a WITH clause doesn't